# Autonomous-accessible-PDF-generator

./: .bobrules  .env.example  7-steps-prompt-chain-pipeline.md  README.md  ai_pipeline.py  app.py  checker.py  pdf_processor.py  project-specifications.md  pyproject.toml  schemas.py  troubleshooter.py
docs/: PROOF_OF_CONCEPT.md  README.md  REQUIREMENTS.md  SPECIFICATION.md
tests/: test_api.py
